# bcg-churn

./: .gitignore  README.html  README.md  app.py  pyproject.toml
notebooks/: 0_Exploration with Price Sentitivity.ipynb  1_Pre_Cleaning.ipynb  2_Create_Dataframe.ipynb  3_Feature_Engineering.ipynb  4_Submission.ipynb
